Fri Nov 24 20:05:41 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: rewrite of overly complex state_delinfo(), minor
   fixups in other functions to make better use of recursion

Thu Nov 23 14:17:08 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - docs/upssched.txt: fix a wrong example for NOTIFYCMD

Wed Nov 22 13:47:31 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dummy-ups.c: fix broken setvar() function

Tue Nov 21 02:30:05 UTC 2006 / Charles Lepple <clepple@gmail.com>

 - configure.in: Don't test for OpenSSL unless the user requests it. Patch
   from Peter Selinger.

Mon Nov 20 18:33:56 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: don't wait for DUMPDONE before forking to the background, this
   obsoletes the MAXINIT parameter

Sat Nov 18 11:21:21 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: forgot to add MAXINIT parameter to man page

Thu Nov 16 20:15:48 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: add MAXINIT parameter to upsd.conf to make the time upsd waits
   for the DUMPDONE to complete configurable.

Wed Nov 15 11:34:01 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd.c: try to (re)connect to a UPS, before declaring it stale, instead
   of the other way around

Wed Nov 15 06:55:07 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - libhid.c: improved formatting of usage paths
	
Fri Nov 10 20:52:39 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: fixed quoting for double 'eval'.
	
Fri Nov 10 21:26:33 CET 2006 / Arjen de Korte <arjen@de-korte.org>

 - genericups: added debug statement to run driver in the foreground to
   make checking compatibility easier (no upsd required).
 - MAINTAINERS: added myself as maintainer of the genericups driver.

Fri Nov 10 04:39:42 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: install drivers and cgi scripts relative to $exec_prefix,
   not $prefix. Reported by Ralf Fassel.
